# zettelkasten-card-mcp

./: .gitignore  CHANGELOG.md  FINAL_WORKFLOW.md  LICENSE  QUICKSTART.md  README.md  config_template.yaml  main.py  pyproject.toml  template.md
development_logs/: IMPLEMENTATION_SUMMARY.md  REFACTORING_SUMMARY.md  REFINEMENTS_SUMMARY.md  WORKFLOW_REFINEMENT_V2.md  zettelkasten-mcp-blueprint.md
zettelkasten_mcp/: __init__.py  config.py  handlers.py  responses.py  server.py
